# Service_Forge_ProyectoCompiladores

./: README.md  app_generada.js  pyproject.toml  serviceforge.bat
CompiladoresProyFinal/: README.md  app_generada.js  app_generada.py  docker-compose.yml  package.json  serviceforge.bat  setup.py
CompiladoresProyFinal/Ejemplos/: app_generada.js  app_generada.py  docker-compose.yml  package.json  reportes.svc  requirements.txt
CompiladoresProyFinal/serviceforge/: main.py  parser.py  testparser.py
CompiladoresProyFinal/serviceforge.egg-info/: SOURCES.txt  top_level.txt
CompiladoresProyFinal/serviceforge/grammar/: autenticacion.svc  prueba.svc  reportes.svc  run.bat
CompiladoresProyFinal/serviceforge_umg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
GramaticaAntlr/: ValidarIf.g4  input.txt  main.py
GramaticaAntlr/.antlr/: ValidarIf.interp  ValidarIf.tokens  ValidarIfLexer.interp  ValidarIfLexer.java  ValidarIfParser.java
GramaticaAntlr/output/: ValidarIf.tokens  ValidarIfLexer.py  ValidarIfListener.py  ValidarIfParser.py  ValidarIfVisitor.py
serviceforge/: Optimizaciones.md  app_generada.py  main.py  parser.py
serviceforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
serviceforge/grammar/: ServiceForge.g4  ServiceForgeBaseListener.java  ServiceForgeLexer.java  ServiceForgeLexer.py  ServiceForgeListener.java  ServiceForgeListener.py  ServiceForgeParser.java  ServiceForgeParser.py  prueba.svc
serviceforge/sforge/: generator.py  lexer.py  lexico.py  semantic_analyzer.py  sintactico.py
serviceforge/tests/: test_lexer.py
(+18 files in other folders)
